Fix for close button on mobile menu

--- a/style.css
+++ b/style.css
@@ -297,6 +297,13 @@ nav ul.uw-sidebar-menu {
   }
 }
 
+/***************************** Fix mobile menu close icon ********************************/
+@media only screen and (max-width : 992px) {
+	nav ul.uw-sidebar-menu {
+		margin-top: 50px;
+	}
+}
+
 /**************************** Try to undo uw.checkbox-and-radio.less ***********************/
 #uw-container .checkbox input,
 #uw-container .radio input
